--- a/ide/fpdoceditwindow.lfm
+++ b/ide/fpdoceditwindow.lfm
@@ -3,38 +3,38 @@ object FPDocEditor: TFPDocEditor
   Height = 326
   Top = 485
   Width = 840
-  ActiveControl = PageControl
   Caption = 'FPDoc editor'
   ClientHeight = 326
   ClientWidth = 840
   KeyPreview = True
-  LCLVersion = '3.99.0.0'
+  LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   OnKeyDown = FormKeyDown
   OnShow = FormShow
   object PageControl: TPageControl
-    Left = 28
+    Left = 38
     Height = 326
     Top = 0
-    Width = 812
+    Width = 800
     ActivePage = DescrTabSheet
     Align = alClient
+    BorderSpacing.Right = 2
     TabIndex = 2
     TabOrder = 0
     TabPosition = tpBottom
     OnChange = PageControlChange
     object ShortTabSheet: TTabSheet
       Caption = 'ShortTabSheet'
-      ClientHeight = 298
-      ClientWidth = 804
+      ClientHeight = 296
+      ClientWidth = 790
       object LinkLabel: TLabel
         AnchorSideTop.Control = LinkEdit
         AnchorSideTop.Side = asrCenter
         Left = 6
-        Height = 15
-        Top = 29
-        Width = 50
+        Height = 16
+        Top = 36
+        Width = 58
         BorderSpacing.Top = 6
         Caption = 'LinkLabel'
         ParentColor = False
@@ -44,9 +44,9 @@ object FPDocEditor: TFPDocEditor
         AnchorSideTop.Control = ShortEdit
         AnchorSideTop.Side = asrCenter
         Left = 6
-        Height = 15
-        Top = 4
-        Width = 56
+        Height = 16
+        Top = 6
+        Width = 66
         BorderSpacing.Left = 6
         Caption = 'ShortLabel'
         ParentColor = False
@@ -56,10 +56,10 @@ object FPDocEditor: TFPDocEditor
         AnchorSideLeft.Side = asrBottom
         AnchorSideRight.Control = ShortTabSheet
         AnchorSideRight.Side = asrBottom
-        Left = 68
-        Height = 23
+        Left = 78
+        Height = 28
         Top = 0
-        Width = 734
+        Width = 710
         Anchors = [akTop, akLeft, akRight]
         AutoSelect = False
         BorderSpacing.Left = 6
@@ -72,8 +72,8 @@ object FPDocEditor: TFPDocEditor
         AnchorSideTop.Control = LinkEdit
         AnchorSideTop.Side = asrBottom
         Left = 6
-        Height = 25
-        Top = 54
+        Height = 30
+        Top = 64
         Width = 96
         AutoSize = True
         BorderSpacing.Around = 6
@@ -88,10 +88,10 @@ object FPDocEditor: TFPDocEditor
         AnchorSideTop.Side = asrBottom
         AnchorSideRight.Control = ShortTabSheet
         AnchorSideRight.Side = asrBottom
-        Left = 62
-        Height = 23
-        Top = 25
-        Width = 740
+        Left = 70
+        Height = 28
+        Top = 30
+        Width = 718
         Anchors = [akTop, akLeft, akRight]
         AutoSelect = False
         BorderSpacing.Left = 6
@@ -105,10 +105,10 @@ object FPDocEditor: TFPDocEditor
         AnchorSideTop.Control = CreateButton
         AnchorSideRight.Control = ShortTabSheet
         AnchorSideRight.Side = asrBottom
-        Left = 689
-        Height = 25
-        Top = 54
-        Width = 115
+        Left = 673
+        Height = 30
+        Top = 64
+        Width = 117
         Anchors = [akTop, akRight]
         AutoSize = True
         Caption = 'OpenXMLButton'
@@ -120,13 +120,13 @@ object FPDocEditor: TFPDocEditor
     end
     object InheritedTabSheet: TTabSheet
       Caption = 'InheritedTabSheet'
-      ClientHeight = 298
-      ClientWidth = 804
+      ClientHeight = 296
+      ClientWidth = 790
       object InheritedShortLabel: TLabel
         Left = 0
-        Height = 15
+        Height = 16
         Top = 2
-        Width = 804
+        Width = 790
         Align = alTop
         BorderSpacing.Top = 2
         Caption = 'InheritedShortLabel'
@@ -139,9 +139,9 @@ object FPDocEditor: TFPDocEditor
         AnchorSideRight.Control = InheritedTabSheet
         AnchorSideRight.Side = asrBottom
         Left = 0
-        Height = 23
-        Top = 19
-        Width = 804
+        Height = 28
+        Top = 20
+        Width = 790
         Anchors = [akTop, akLeft, akRight]
         BorderSpacing.Top = 2
         ReadOnly = True
@@ -152,9 +152,9 @@ object FPDocEditor: TFPDocEditor
         AnchorSideTop.Control = InheritedShortEdit
         AnchorSideTop.Side = asrBottom
         Left = 0
-        Height = 25
-        Top = 48
-        Width = 152
+        Height = 30
+        Top = 54
+        Width = 161
         AutoSize = True
         BorderSpacing.Around = 6
         Caption = 'MoveToInheritedButton'
@@ -166,10 +166,10 @@ object FPDocEditor: TFPDocEditor
         AnchorSideLeft.Side = asrBottom
         AnchorSideTop.Control = MoveToInheritedButton
         AnchorSideTop.Side = asrCenter
-        Left = 162
-        Height = 25
-        Top = 48
-        Width = 165
+        Left = 171
+        Height = 30
+        Top = 54
+        Width = 174
         AutoSize = True
         BorderSpacing.Left = 10
         Caption = 'CopyFromInheritedButton'
@@ -180,10 +180,10 @@ object FPDocEditor: TFPDocEditor
         AnchorSideLeft.Control = CopyFromInheritedButton
         AnchorSideLeft.Side = asrBottom
         AnchorSideTop.Control = CopyFromInheritedButton
-        Left = 337
-        Height = 25
-        Top = 48
-        Width = 166
+        Left = 355
+        Height = 30
+        Top = 54
+        Width = 177
         AutoSize = True
         BorderSpacing.Left = 10
         Caption = 'AddLinkToInheritedButton'
@@ -193,16 +193,15 @@ object FPDocEditor: TFPDocEditor
     end
     object DescrTabSheet: TTabSheet
       Caption = 'DescrTabSheet'
-      ClientHeight = 298
-      ClientWidth = 804
+      ClientHeight = 296
+      ClientWidth = 790
       inline DescrSynEdit: TSynEdit
         Left = 0
-        Height = 269
-        Top = 25
-        Width = 802
+        Height = 266
+        Top = 30
+        Width = 788
         Align = alClient
         BorderSpacing.Right = 2
-        BorderSpacing.Bottom = 4
         Font.Height = -11
         Font.Name = 'Courier New'
         Font.Pitch = fpFixed
@@ -755,6 +754,8 @@ object FPDocEditor: TFPDocEditor
           object SynGutterMarks1: TSynGutterMarks
             Width = 24
             MouseActions = <>
+            MaxExtraMarksColums = 0
+            Options = [sgmoDeDuplicateMarksOnOverflow]
           end
           object SynGutterLineNumber1: TSynGutterLineNumber
             Width = 15
@@ -789,23 +790,23 @@ object FPDocEditor: TFPDocEditor
       end
       object ShortPanel: TPanel
         Left = 0
-        Height = 25
+        Height = 30
         Top = 0
-        Width = 804
+        Width = 790
         Align = alTop
         Alignment = taLeftJustify
         AutoSize = True
         Caption = 'Short'
-        ClientHeight = 25
-        ClientWidth = 804
+        ClientHeight = 30
+        ClientWidth = 790
         TabOrder = 1
         object DescrShortEdit: TEdit
           AnchorSideLeft.Control = ShortPanel
           AnchorSideRight.Side = asrBottom
           Left = 61
-          Height = 23
+          Height = 28
           Top = 1
-          Width = 740
+          Width = 726
           Align = alRight
           Anchors = [akTop, akLeft, akRight, akBottom]
           AutoSelect = False
@@ -820,13 +821,13 @@ object FPDocEditor: TFPDocEditor
     end
     object ErrorsTabSheet: TTabSheet
       Caption = 'ErrorsTabSheet'
-      ClientHeight = 298
-      ClientWidth = 804
+      ClientHeight = 296
+      ClientWidth = 790
       inline ErrorsSynEdit: TSynEdit
         Left = 0
-        Height = 294
+        Height = 292
         Top = 0
-        Width = 802
+        Width = 788
         Align = alClient
         BorderSpacing.Right = 2
         BorderSpacing.Bottom = 4
@@ -1382,6 +1383,8 @@ object FPDocEditor: TFPDocEditor
           object SynGutterMarks1: TSynGutterMarks
             Width = 24
             MouseActions = <>
+            MaxExtraMarksColums = 0
+            Options = [sgmoDeDuplicateMarksOnOverflow]
           end
           object SynGutterLineNumber1: TSynGutterLineNumber
             Width = 15
@@ -1417,13 +1420,13 @@ object FPDocEditor: TFPDocEditor
     end
     object SeeAlsoTabSheet: TTabSheet
       Caption = 'SeeAlsoTabSheet'
-      ClientHeight = 298
-      ClientWidth = 804
+      ClientHeight = 296
+      ClientWidth = 790
       inline SeeAlsoSynEdit: TSynEdit
         Left = 0
-        Height = 298
+        Height = 296
         Top = 0
-        Width = 804
+        Width = 790
         Align = alClient
         Font.Height = -11
         Font.Name = 'Courier New'
@@ -1977,6 +1980,8 @@ object FPDocEditor: TFPDocEditor
           object SynGutterMarks1: TSynGutterMarks
             Width = 24
             MouseActions = <>
+            MaxExtraMarksColums = 0
+            Options = [sgmoDeDuplicateMarksOnOverflow]
           end
           object SynGutterLineNumber1: TSynGutterLineNumber
             Width = 15
@@ -2012,13 +2017,13 @@ object FPDocEditor: TFPDocEditor
     end
     object ExampleTabSheet: TTabSheet
       Caption = 'ExampleTabSheet'
-      ClientHeight = 298
-      ClientWidth = 804
+      ClientHeight = 296
+      ClientWidth = 790
       object ExampleEdit: TEdit
         Left = 0
-        Height = 23
+        Height = 28
         Top = 0
-        Width = 802
+        Width = 788
         Align = alTop
         AutoSelect = False
         BorderSpacing.Right = 2
@@ -2031,10 +2036,10 @@ object FPDocEditor: TFPDocEditor
         AnchorSideTop.Side = asrBottom
         AnchorSideRight.Control = ExampleTabSheet
         AnchorSideRight.Side = asrBottom
-        Left = 653
-        Height = 25
-        Top = 29
-        Width = 145
+        Left = 630
+        Height = 30
+        Top = 34
+        Width = 154
         Anchors = [akTop, akRight]
         AutoSize = True
         BorderSpacing.Around = 6
@@ -2045,35 +2050,35 @@ object FPDocEditor: TFPDocEditor
     end
     object TopicSheet: TTabSheet
       Caption = 'Topics'
-      ClientHeight = 298
-      ClientWidth = 804
+      ClientHeight = 296
+      ClientWidth = 790
       object Panel1: TPanel
-        Left = 634
-        Height = 298
+        Left = 620
+        Height = 296
         Top = 0
         Width = 170
         Align = alRight
         BorderSpacing.Left = 5
         BevelOuter = bvNone
-        ClientHeight = 298
+        ClientHeight = 296
         ClientWidth = 170
         TabOrder = 0
         object Panel2: TPanel
           Left = 0
-          Height = 25
+          Height = 30
           Top = 0
           Width = 170
           Align = alTop
           AutoSize = True
           BevelOuter = bvNone
-          ClientHeight = 25
+          ClientHeight = 30
           ClientWidth = 170
           TabOrder = 0
           object NewTopicButton: TButton
-            Left = 120
-            Height = 25
+            Left = 129
+            Height = 30
             Top = 0
-            Width = 50
+            Width = 41
             Align = alRight
             AutoSize = True
             Caption = 'New'
@@ -2082,9 +2087,9 @@ object FPDocEditor: TFPDocEditor
           end
           object NewTopicNameEdit: TEdit
             Left = 0
-            Height = 25
+            Height = 30
             Top = 0
-            Width = 115
+            Width = 124
             Align = alClient
             BorderSpacing.Right = 5
             TabOrder = 1
@@ -2093,33 +2098,34 @@ object FPDocEditor: TFPDocEditor
         end
         object TopicListBox: TListBox
           Left = 0
-          Height = 268
-          Top = 30
+          Height = 261
+          Top = 35
           Width = 170
           Align = alClient
           BorderSpacing.Top = 5
           ItemHeight = 0
           ScrollWidth = 168
           TabOrder = 1
+          TopIndex = -1
           OnClick = TopicListBoxClick
           OnEnter = TopicControlEnter
         end
       end
       object Panel3: TPanel
         Left = 0
-        Height = 298
+        Height = 296
         Top = 0
-        Width = 629
+        Width = 615
         Align = alClient
         BevelOuter = bvNone
-        ClientHeight = 298
-        ClientWidth = 629
+        ClientHeight = 296
+        ClientWidth = 615
         TabOrder = 1
         object TopicShort: TEdit
           Left = 0
-          Height = 23
+          Height = 28
           Top = 0
-          Width = 629
+          Width = 615
           Align = alTop
           AutoSelect = False
           TabOrder = 0
@@ -2128,9 +2134,9 @@ object FPDocEditor: TFPDocEditor
         end
         inline TopicDescrSynEdit: TSynEdit
           Left = 0
-          Height = 270
-          Top = 28
-          Width = 629
+          Height = 263
+          Top = 33
+          Width = 615
           Align = alClient
           BorderSpacing.Top = 5
           Font.Height = -11
@@ -2682,6 +2688,8 @@ object FPDocEditor: TFPDocEditor
             object SynGutterMarks1: TSynGutterMarks
               Width = 24
               MouseActions = <>
+              MaxExtraMarksColums = 0
+              Options = [sgmoDeDuplicateMarksOnOverflow]
             end
             object SynGutterLineNumber1: TSynGutterLineNumber
               Width = 15
@@ -2721,43 +2729,43 @@ object FPDocEditor: TFPDocEditor
     Left = 0
     Height = 326
     Top = 0
-    Width = 28
+    Width = 38
     Align = alLeft
     AutoSize = True
     BevelOuter = bvNone
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 3
     ClientHeight = 326
-    ClientWidth = 28
+    ClientWidth = 38
     FullRepaint = False
     ParentShowHint = False
     ShowHint = True
     TabOrder = 1
     object BoldFormatButton: TSpeedButton
       Left = 0
-      Height = 4
+      Height = 10
       Top = 0
-      Width = 4
+      Width = 10
       Constraints.MaxHeight = 23
       Constraints.MaxWidth = 20
       OnClick = FormatButtonClick
     end
     object ItalicFormatButton: TSpeedButton
       Tag = 1
-      Left = 4
-      Height = 4
+      Left = 10
+      Height = 10
       Top = 0
-      Width = 4
+      Width = 10
       Constraints.MaxHeight = 23
       Constraints.MaxWidth = 20
       OnClick = FormatButtonClick
     end
     object UnderlineFormatButton: TSpeedButton
       Tag = 2
-      Left = 8
-      Height = 4
+      Left = 20
+      Height = 10
       Top = 0
-      Width = 4
+      Width = 10
       Constraints.MaxHeight = 23
       Constraints.MaxWidth = 20
       OnClick = FormatButtonClick
@@ -2765,28 +2773,28 @@ object FPDocEditor: TFPDocEditor
     object InsertVarTagButton: TSpeedButton
       Tag = 5
       Left = 0
-      Height = 4
-      Top = 4
-      Width = 4
+      Height = 10
+      Top = 10
+      Width = 10
       Constraints.MaxHeight = 23
       Constraints.MaxWidth = 20
       OnClick = FormatButtonClick
     end
     object InsertParagraphSpeedButton: TSpeedButton
       Tag = 6
-      Left = 4
-      Height = 4
-      Top = 4
-      Width = 4
+      Left = 10
+      Height = 10
+      Top = 10
+      Width = 10
       Constraints.MaxHeight = 23
       Constraints.MaxWidth = 20
       OnClick = FormatButtonClick
     end
     object InsertLinkSpeedButton: TSpeedButton
-      Left = 8
-      Height = 4
-      Top = 4
-      Width = 4
+      Left = 20
+      Height = 10
+      Top = 10
+      Width = 10
       Constraints.MaxHeight = 23
       Constraints.MaxWidth = 20
       Enabled = False
@@ -2797,9 +2805,9 @@ object FPDocEditor: TFPDocEditor
     object InsertCodeTagButton: TSpeedButton
       Tag = 3
       Left = 0
-      Height = 4
-      Top = 8
-      Width = 4
+      Height = 10
+      Top = 20
+      Width = 10
       Constraints.MaxHeight = 23
       Constraints.MaxWidth = 20
       ShowHint = True
@@ -2808,10 +2816,10 @@ object FPDocEditor: TFPDocEditor
     end
     object InsertRemarkButton: TSpeedButton
       Tag = 4
-      Left = 4
-      Height = 4
-      Top = 8
-      Width = 4
+      Left = 10
+      Height = 10
+      Top = 20
+      Width = 10
       Constraints.MaxHeight = 23
       Constraints.MaxWidth = 20
       ShowHint = True
@@ -2820,10 +2828,10 @@ object FPDocEditor: TFPDocEditor
     end
     object InsertPrintShortSpeedButton: TSpeedButton
       Tag = 7
-      Left = 8
-      Height = 4
-      Top = 8
-      Width = 4
+      Left = 20
+      Height = 10
+      Top = 20
+      Width = 10
       Constraints.MaxHeight = 23
       Constraints.MaxWidth = 20
       ShowHint = True
@@ -2833,9 +2841,9 @@ object FPDocEditor: TFPDocEditor
     object InsertURLTagSpeedButton: TSpeedButton
       Tag = 8
       Left = 0
-      Height = 4
-      Top = 12
-      Width = 4
+      Height = 10
+      Top = 30
+      Width = 10
       Constraints.MaxHeight = 23
       Constraints.MaxWidth = 20
       ShowHint = True
@@ -2847,7 +2855,7 @@ object FPDocEditor: TFPDocEditor
       Left = 0
       Height = 29
       Top = 297
-      Width = 28
+      Width = 38
       Align = alBottom
       Caption = 'Save'
       OnClick = SaveButtonClick
@@ -2865,7 +2873,7 @@ object FPDocEditor: TFPDocEditor
     Enabled = False
     TextAttri.Style = []
     WantBracesParsed = False
-    Left = 16
-    Top = 56
+    Left = 32
+    Top = 70
   end
 end
