--- a/components/anchordocking/anchordockoptionsdlg.lfm
+++ b/components/anchordocking/anchordockoptionsdlg.lfm
@@ -1,25 +1,25 @@
 object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
   Left = 0
-  Height = 842
+  Height = 632
   Top = 0
-  Width = 636
-  ClientHeight = 842
-  ClientWidth = 636
-  DesignTimePPI = 144
+  Width = 477
+  ClientHeight = 632
+  ClientWidth = 477
+  DesignTimePPI = 108
   ParentFont = False
   TabOrder = 0
-  DesignLeft = 517
-  DesignTop = 239
+  DesignLeft = -9
+  DesignTop = 482
   object DragThresholdLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = DragThresholdSpinEdit
     AnchorSideTop.Side = asrCenter
-    Left = 15
-    Height = 25
-    Top = 13
-    Width = 158
-    BorderSpacing.Left = 15
-    BorderSpacing.Top = 15
+    Left = 11
+    Height = 18
+    Top = 12
+    Width = 137
+    BorderSpacing.Left = 11
+    BorderSpacing.Top = 11
     Caption = 'DragThresholdLabel'
     ParentColor = False
     ParentFont = False
@@ -30,15 +30,17 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 15
-    Height = 70
-    Top = 38
-    Width = 606
+    Left = 11
+    Height = 52
+    Top = 30
+    Width = 455
     Max = 20
-    OnChange = DragThresholdTrackBarChange
     Position = 0
+    OnChange = DragThresholdTrackBarChange
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Right = 15
+    BorderSpacing.Right = 11
+    Color = 3487029
+    ParentColor = False
     ParentFont = False
     ParentShowHint = False
     ShowHint = True
@@ -49,12 +51,12 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = Owner
     AnchorSideRight.Control = Owner
-    Left = 182
-    Height = 33
-    Top = 9
-    Width = 90
-    BorderSpacing.Left = 9
-    BorderSpacing.Top = 9
+    Left = 155
+    Height = 28
+    Top = 7
+    Width = 68
+    BorderSpacing.Left = 7
+    BorderSpacing.Top = 7
     MaxValue = 20
     ParentFont = False
     TabOrder = 0
@@ -64,11 +66,11 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Control = DragThresholdLabel
     AnchorSideTop.Control = DragThresholdTrackBar
     AnchorSideTop.Side = asrBottom
-    Left = 15
-    Height = 25
-    Top = 123
-    Width = 145
-    BorderSpacing.Top = 15
+    Left = 11
+    Height = 18
+    Top = 93
+    Width = 125
+    BorderSpacing.Top = 11
     Caption = 'SplitterWidthLabel'
     ParentColor = False
     ParentFont = False
@@ -79,14 +81,16 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = DragThresholdTrackBar
     AnchorSideRight.Side = asrBottom
-    Left = 15
-    Height = 70
-    Top = 148
-    Width = 606
+    Left = 11
+    Height = 52
+    Top = 111
+    Width = 455
     Min = 1
-    OnChange = SplitterWidthTrackBarChange
     Position = 1
+    OnChange = SplitterWidthTrackBarChange
     Anchors = [akTop, akLeft, akRight]
+    Color = 3487029
+    ParentColor = False
     ParentFont = False
     ParentShowHint = False
     ShowHint = True
@@ -94,13 +98,12 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
   end
   object ScaleOnResizeCheckBox: TCheckBox
     AnchorSideLeft.Control = DragThresholdLabel
-    AnchorSideTop.Control = SplitterWidthTrackBar
+    AnchorSideTop.Control = SplitterResizeStyleComboBox
     AnchorSideTop.Side = asrBottom
-    Left = 15
-    Height = 29
-    Top = 224
-    Width = 214
-    BorderSpacing.Top = 6
+    Left = 11
+    Height = 21
+    Top = 193
+    Width = 186
     Caption = 'ScaleOnResizeCheckBox'
     ParentFont = False
     ParentShowHint = False
@@ -111,26 +114,26 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Control = ScaleOnResizeCheckBox
     AnchorSideTop.Control = ScaleOnResizeCheckBox
     AnchorSideTop.Side = asrBottom
-    Left = 15
-    Height = 29
-    Top = 253
-    Width = 202
+    Left = 11
+    Height = 21
+    Top = 214
+    Width = 175
     Caption = 'ShowHeaderCheckBox'
-    OnChange = ShowHeaderCheckBoxChange
     ParentFont = False
     ParentShowHint = False
     ShowHint = True
     TabOrder = 5
+    OnChange = ShowHeaderCheckBoxChange
   end
   object ShowHeaderCaptionCheckBox: TCheckBox
     AnchorSideLeft.Control = ScaleOnResizeCheckBox
     AnchorSideTop.Control = ShowHeaderCheckBox
     AnchorSideTop.Side = asrBottom
-    Left = 37
-    Height = 29
-    Top = 282
-    Width = 264
-    BorderSpacing.Left = 22
+    Left = 27
+    Height = 21
+    Top = 235
+    Width = 228
+    BorderSpacing.Left = 16
     Caption = 'ShowHeaderCaptionCheckBox'
     ParentFont = False
     ParentShowHint = False
@@ -141,10 +144,10 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Control = ShowHeaderCaptionCheckBox
     AnchorSideTop.Control = ShowHeaderCaptionCheckBox
     AnchorSideTop.Side = asrBottom
-    Left = 37
-    Height = 29
-    Top = 311
-    Width = 347
+    Left = 27
+    Height = 21
+    Top = 256
+    Width = 299
     Caption = 'HideHeaderCaptionForFloatingCheckBox'
     ParentFont = False
     ParentShowHint = False
@@ -158,28 +161,28 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 174
-    Height = 33
-    Top = 398
-    Width = 447
+    Left = 147
+    Height = 30
+    Top = 319
+    Width = 319
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 9
-    BorderSpacing.Right = 15
-    ItemHeight = 25
-    OnDrawItem = HeaderStyleComboBoxDrawItem
+    BorderSpacing.Left = 7
+    BorderSpacing.Right = 11
+    ItemHeight = 0
     ParentFont = False
     Style = csDropDownList
     TabOrder = 10
+    OnDrawItem = HeaderStyleComboBoxDrawItem
   end
   object HeaderStyleLabel: TLabel
     AnchorSideLeft.Control = ShowHeaderCheckBox
     AnchorSideTop.Control = HeaderStyleComboBox
     AnchorSideTop.Side = asrCenter
-    Left = 30
-    Height = 25
-    Top = 402
-    Width = 135
-    BorderSpacing.Left = 15
+    Left = 22
+    Height = 18
+    Top = 325
+    Width = 118
+    BorderSpacing.Left = 11
     Caption = 'HeaderStyleLabel'
     ParentColor = False
     ParentFont = False
@@ -188,10 +191,10 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Control = HideHeaderCaptionForFloatingCheckBox
     AnchorSideTop.Control = HideHeaderCaptionForFloatingCheckBox
     AnchorSideTop.Side = asrBottom
-    Left = 37
-    Height = 29
-    Top = 340
-    Width = 219
+    Left = 27
+    Height = 21
+    Top = 277
+    Width = 191
     Caption = 'FlattenHeadersCheckBox'
     ParentFont = False
     ParentShowHint = False
@@ -202,10 +205,10 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Control = FlattenHeadersCheckBox
     AnchorSideTop.Control = FlattenHeadersCheckBox
     AnchorSideTop.Side = asrBottom
-    Left = 37
-    Height = 29
-    Top = 369
-    Width = 207
+    Left = 27
+    Height = 21
+    Top = 298
+    Width = 181
     Caption = 'FilledHeadersCheckBox'
     ParentFont = False
     ParentShowHint = False
@@ -216,10 +219,10 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Control = FilledHeadersCheckBox
     AnchorSideTop.Control = HeaderStyleComboBox
     AnchorSideTop.Side = asrBottom
-    Left = 37
-    Height = 29
-    Top = 431
-    Width = 240
+    Left = 27
+    Height = 21
+    Top = 349
+    Width = 206
     Caption = 'HighlightFocusedCheckBox'
     ParentFont = False
     ParentShowHint = False
@@ -231,11 +234,11 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = SplitterWidthLabel
     AnchorSideTop.Side = asrCenter
-    Left = 169
-    Height = 33
-    Top = 119
-    Width = 90
-    BorderSpacing.Left = 9
+    Left = 143
+    Height = 28
+    Top = 88
+    Width = 68
+    BorderSpacing.Left = 7
     MaxValue = 10
     MinValue = 1
     ParentFont = False
@@ -247,11 +250,11 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Control = DragThresholdLabel
     AnchorSideTop.Control = FlatHeadersButtons
     AnchorSideTop.Side = asrBottom
-    Left = 15
-    Height = 25
-    Top = 533
-    Width = 168
-    BorderSpacing.Top = 15
+    Left = 11
+    Height = 18
+    Top = 423
+    Width = 145
+    BorderSpacing.Top = 11
     Caption = 'HeaderAlignTopLabel'
     ParentColor = False
     ParentFont = False
@@ -262,17 +265,19 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = DragThresholdTrackBar
     AnchorSideRight.Side = asrBottom
-    Left = 15
-    Height = 70
-    Top = 558
-    Width = 606
+    Left = 11
+    Height = 52
+    Top = 441
+    Width = 455
     Frequency = 10
     Max = 150
-    OnChange = HeaderAlignTopTrackBarChange
     PageSize = 10
     Position = 0
+    OnChange = HeaderAlignTopTrackBarChange
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 15
+    BorderSpacing.Left = 11
+    Color = 3487029
+    ParentColor = False
     ParentFont = False
     ParentShowHint = False
     ShowHint = True
@@ -283,11 +288,11 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = HeaderAlignTopLabel
     AnchorSideTop.Side = asrCenter
-    Left = 192
-    Height = 33
-    Top = 529
-    Width = 90
-    BorderSpacing.Left = 9
+    Left = 163
+    Height = 28
+    Top = 418
+    Width = 68
+    BorderSpacing.Left = 7
     MaxValue = 150
     ParentFont = False
     TabOrder = 12
@@ -297,11 +302,11 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Control = DragThresholdLabel
     AnchorSideTop.Control = HeaderAlignTopTrackBar
     AnchorSideTop.Side = asrBottom
-    Left = 15
-    Height = 25
-    Top = 643
-    Width = 168
-    BorderSpacing.Top = 15
+    Left = 11
+    Height = 18
+    Top = 504
+    Width = 145
+    BorderSpacing.Top = 11
     Caption = 'HeaderAlignLeftLabel'
     ParentColor = False
     ParentFont = False
@@ -312,17 +317,19 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = DragThresholdTrackBar
     AnchorSideRight.Side = asrBottom
-    Left = 15
-    Height = 70
-    Top = 668
-    Width = 606
+    Left = 11
+    Height = 52
+    Top = 522
+    Width = 455
     Frequency = 10
     Max = 200
-    OnChange = HeaderAlignLeftTrackBarChange
     PageSize = 10
     Position = 0
+    OnChange = HeaderAlignLeftTrackBarChange
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 15
+    BorderSpacing.Left = 11
+    Color = 3487029
+    ParentColor = False
     ParentFont = False
     ParentShowHint = False
     ShowHint = True
@@ -333,11 +340,11 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = HeaderAlignLeftLabel
     AnchorSideTop.Side = asrCenter
-    Left = 192
-    Height = 33
-    Top = 639
-    Width = 90
-    BorderSpacing.Left = 9
+    Left = 163
+    Height = 28
+    Top = 499
+    Width = 68
+    BorderSpacing.Left = 7
     MaxValue = 200
     ParentFont = False
     TabOrder = 14
@@ -347,10 +354,10 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Control = FilledHeadersCheckBox
     AnchorSideTop.Control = HighlightFocusedCheckBox
     AnchorSideTop.Side = asrBottom
-    Left = 37
-    Height = 29
-    Top = 460
-    Width = 234
+    Left = 27
+    Height = 21
+    Top = 370
+    Width = 202
     Caption = 'DockSitesCanBeMinimized'
     ParentFont = False
     ParentShowHint = False
@@ -361,11 +368,11 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Control = ShowHeaderCheckBox
     AnchorSideTop.Control = HeaderAlignLeftTrackBar
     AnchorSideTop.Side = asrBottom
-    Left = 15
-    Height = 29
-    Top = 744
-    Width = 219
-    BorderSpacing.Top = 6
+    Left = 11
+    Height = 21
+    Top = 578
+    Width = 191
+    BorderSpacing.Top = 4
     Caption = 'MultiLinePagesCheckBox'
     ParentFont = False
     ParentShowHint = False
@@ -376,11 +383,11 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Control = DragThresholdLabel
     AnchorSideTop.Control = MultiLinePagesCheckBox
     AnchorSideTop.Side = asrBottom
-    Left = 15
-    Height = 29
-    Top = 779
-    Width = 218
-    BorderSpacing.Top = 6
+    Left = 11
+    Height = 21
+    Top = 603
+    Width = 184
+    BorderSpacing.Top = 4
     Caption = 'FloatingWindowsOnTop'
     ParentFont = False
     ParentShowHint = False
@@ -391,14 +398,47 @@ object AnchorDockOptionsFrame: TAnchorDockOptionsFrame
     AnchorSideLeft.Control = FilledHeadersCheckBox
     AnchorSideTop.Control = DockSitesCanBeMinimized
     AnchorSideTop.Side = asrBottom
-    Left = 37
-    Height = 29
-    Top = 489
-    Width = 179
+    Left = 27
+    Height = 21
+    Top = 391
+    Width = 157
     Caption = 'FlatHeadersButtons'
     ParentFont = False
     ParentShowHint = False
     ShowHint = True
     TabOrder = 19
+  end
+  object SplitterResizeStyleLabel: TLabel
+    AnchorSideLeft.Control = DragThresholdLabel
+    AnchorSideTop.Control = SplitterResizeStyleComboBox
+    AnchorSideTop.Side = asrCenter
+    Left = 11
+    Height = 18
+    Top = 169
+    Width = 160
+    BorderSpacing.Top = 4
+    Caption = 'SplitterResizeStyleLabel'
+    ParentColor = False
+    ParentFont = False
+  end
+  object SplitterResizeStyleComboBox: TComboBox
+    AnchorSideLeft.Control = SplitterResizeStyleLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = SplitterWidthTrackBar
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    Left = 178
+    Height = 30
+    Top = 163
+    Width = 288
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Left = 7
+    BorderSpacing.Right = 11
+    ItemHeight = 0
+    ParentFont = False
+    Style = csDropDownList
+    TabOrder = 20
+    OnDrawItem = HeaderStyleComboBoxDrawItem
   end
 end
